--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
             </div>
         </div> 
     </div>
-    <span id="copyright">&copy; 2021 Marin Stefan Daniel</span>
-    <br>
-    <span style="font-size:small;">No rights reserved</span>
+    <div>
+        <p class="press-buttons">Press the Buttons</p>
+        <p id="copyright">&copy; 2021 Marin Stefan Daniel</p>
+        <p id="copyright" style="font-size:small;">No rights reserved</p>
+    </div>
 
     <script src="index.js"></script>
 </body>
